dark.css
@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans&display=swap');

body {
    background-color: #3a255e;
}

input {
    box-sizing: border-box;
}

.calculator {
    position: absolute;
    top: 0%;
    right: 0%;
    height: 100%;
    width: 100%
}

.calculator input {
    font-family: 'Shantell Sans', cursive;
    font-size: x-large;
    background-color: #2f2247;
    border: #4a2a82 solid 2px;
    border-radius: 10px;
    color: white;
    width: ;
    height: 8%;
}

#toggleBtn {
    font-family: 'Shantell Sans', cursive;
    font-size: 2.0vw;
    float: right;
    background-color: #251542;
    color: white;
    border: #4a2a82 solid 2px;
    border-radius:20px;
    width: 10%;
    height: 8%;
}

#toggleBtn:hover {
    background-color: #1b102e;
}

#buttons {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    height: 92%;
}

#buttons button {
    font-family: 'Shantell Sans', cursive;
    font-size: x-large;
    background-color: #251542;
    color: white;
    border: #4a2a82 solid 2px;
    border-radius: 20px;
    height: 100%;
}

#buttons button:hover {
    background-color: #1b102e;
}

